welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:19: error: not found: value finDiag
  if(!finDiag) {
      ^